--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,55 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
+
+    <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- Responsive -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dakarbusinesse</title>
+
+    <!-- SEO Title -->
+    <title>Dakar Business – Boutique en ligne et entreprises à Dakar</title>
+
+    <!-- SEO Description -->
+    <meta
+      name="description"
+      content="Dakar Business est une plateforme dédiée aux entreprises et professionnels à Dakar. Découvrez des services adaptés au marché sénégalais."
+    />
+
+    <!-- Keywords (optionnel mais utile) -->
+    <meta
+      name="keywords"
+      content="dakar business, entreprise à dakar, services à dakar, business sénégal"
+    />
+
+    <!-- Auteur -->
+    <meta name="author" content="Dakar Business" />
+
+    <!-- Open Graph (Facebook, WhatsApp) -->
+    <meta property="og:title" content="Dakar Business" />
+    <meta
+      property="og:description"
+      content="Plateforme dédiée aux entreprises et services professionnels à Dakar."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/images/dakar-business-profil.png" />
+    <meta property="og:url" content="https://www.dakarbusiness.shop" />
+
+    <!-- Données structurées Google -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Dakar Business",
+      "url": "https://www.dakarbusiness.shop",
+      "logo": "https://www.dakarbusiness.shop/images/dakar-business-profil.png",
+      "description": "Plateforme dédiée aux entreprises et professionnels à Dakar."
+    }
+    </script>
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
